WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68517
Web Inspector: minor fixes in the DOM domain of the protocol.
https://bugs.webkit.org/show_bug.cgi?id=68517
Summary
Web Inspector: minor fixes in the DOM domain of the protocol.
Pavel Feldman
Reported
2011-09-21 02:47:31 PDT
Patch to follow.
Attachments
Patch
(9.18 KB, patch)
2011-09-21 04:22 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2011-09-21 04:22:21 PDT
Created
attachment 108131
[details]
Patch
Pavel Feldman
Comment 2
2011-09-21 04:49:11 PDT
Comment on
attachment 108131
[details]
Patch Clearing flags on attachment: 108131 Committed
r95614
: <
http://trac.webkit.org/changeset/95614
>
Pavel Feldman
Comment 3
2011-09-21 04:49:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug