Web Inspector: minor fixes in the DOM domain of the protocol. https://bugs.webkit.org/show_bug.cgi?id=68517

Reviewed by Yury Semikhatsky.

* inspector/Inspector.json:
* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::setAttributesAsText):
* inspector/InspectorDOMAgent.h:
* inspector/front-end/DOMAgent.js:
(WebInspector.DOMNode.prototype.setAttribute):

Canonical link: https://commits.webkit.org/84459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95614 268f45cc-cd09-0410-ab3c-d52691b4dbfc